syntax = "proto3";
package proto;
option go_package = ".;proto";

service Databricks {
  rpc Connect(ConnectRequest) returns (ConnectResponse) {}
  rpc Execute(ExecuteRequest) returns (ExecuteResponse) {}
  rpc FetchSchemas(FetchSchemasRequest) returns (FetchSchemasResponse) {}
  rpc FetchTables(FetchTablesRequest) returns (FetchTablesResponse) {}
  rpc FetchTableAttributes(FetchTableAttributesRequest) returns (FetchTableAttributesResponse) {}
  rpc FetchTotalCountInTable(FetchTotalCountInTableRequest) returns (FetchTotalCountInTableResponse) {}
  rpc Close(CloseRequest) returns (CloseResponse) {}
}

message ConnectRequest {
  string host = 1;
  string port = 2;
  string schema = 3;
  string sparkServerType = 4;
  string authMech = 5;
  string uid = 6;
  string pwd = 7;
  string thriftTransport = 8;
  string ssl = 9;
  string httpPath = 10;
  string userAgentEntry = 11;
  string identifier = 12;
}

message ConnectResponse{
  string errorCode = 1;
  string errorMessage = 2;
}

message ExecuteRequest {
  string sqlStatement = 1;
  string identifier = 2;
}

message ExecuteResponse {
  string errorCode = 1;
  string errorMessage = 2;
}

message FetchSchemasRequest {
  string sqlStatement = 1;
  string identifier = 2;
}

message FetchSchemasResponse {
  repeated string databases = 1;
  string errorCode = 2;
  string errorMessage = 3;
}

message FetchTablesRequest {
  string schema = 1;
  string identifier = 2;
}

message FetchTablesResponse {
  repeated string tables = 1;
  string errorCode = 2;
  string errorMessage = 3;
}

message FetchTableAttributesRequest {
  string schema = 1;
  string table = 2;
  string identifier = 3;
}

message ItemAttribute {
  string colName = 1;
  string dataType = 2;
}

message FetchTableAttributesResponse {
  repeated ItemAttribute attributes = 1;
  string errorCode = 2;
  string errorMessage = 3;
}

message FetchTotalCountInTableRequest {
  string sqlStatement = 1;
  string identifier = 2;
}

message FetchTotalCountInTableResponse {
  int64 count = 1;
  string errorCode = 2;
  string errorMessage = 3;
}

message CloseRequest {
  string identifier = 1;
}

message CloseResponse {
  string errorCode = 1;
  string errorMessage = 2;
}
