syntax = "proto3";
package proto;
import "google/protobuf/timestamp.proto";


option go_package = ".;proto";


service Warehouse {
  rpc GetWHUploads (GetWHUploadsRequest) returns (GetWHUploadsResponse);
  rpc GetWHUpload (GetWHUploadRequest) returns (GetWHUploadResponse);
  rpc GetWHTables (GetWHTablesRequest) returns (GetWHTablesResponse);
}


message GetWHTablesRequest {
  int64 upload_id = 1;
  string table_name = 2;
}

message GetWHUploadsRequest{
  string source_id = 1;
  string destination_id = 2;
  string destination_type = 3;
  string status = 4;
  bool include_tables_in_res = 5;
  int64 page=6;
  int64 size=7;
}
message GetWHUploadRequest{
  int64 upload_id=1;
}
message Pagination {
  int64 page=1;
  int64 size=2;
}
message GetWHUploadsResponse{
  repeated GetWHUploadResponse uploads = 1;
  Pagination pagination =2;
}
message GetWHTablesResponse {
  repeated WHTable tables = 1;
}
message GetWHUploadResponse {
  int64 id = 1;
  string source_id = 2;
  string destination_id = 3;
  string destination_type = 4;
  string namespace = 5;
  string error = 6;
  string status = 7;
  google.protobuf.Timestamp first_event_at = 8;
  google.protobuf.Timestamp last_event_at = 9;
  string next_retry_time = 10;
  int64 duration = 11;
  repeated WHTable tables = 12;
}

message WHTable {
  int64 id=1;
  int64 upload_id=2;
  string name=3;
  string status=4;
  string error=5;
  google.protobuf.Timestamp last_exec_at=6;
  int64 count=7;
  google.protobuf.Timestamp first_scheduled_time=8;
}
